--- a/songs/pt/a_amizade_164.tex
+++ b/songs/pt/a_amizade_164.tex
@@ -16,6 +16,7 @@
 % section #1: verse 
 
 \beginverse
+\- TEST BY FIFAS - delete
 \[E]São tantas as coisas bonitas 
 que a \[A]pura amizade nos \[E]traz.
 \[F#m]Parece o \[C#m]sol de uma \[B]ilha, 
